Marketing Video → #6 with AWAITING DELIVERY badge

--- a/netrunner.html
+++ b/netrunner.html
@@ -1425,11 +1425,11 @@ function renderOverview() {
         <div style="display:flex;flex-direction:column;gap:10px">
           ${[
             { num: 1, name: 'Portor Inventory Tool', domain: '🏭', note: 'Fine-tune categories, set min thresholds & reorder qty, import monthly run rate', color: 'var(--red)' },
-            { num: 2, name: 'Portor Remotion Marketing Video', domain: '🏭', note: 'Marketing video build', color: 'var(--red)' },
-            { num: 3, name: 'Portor Cross Tool', domain: '🏭', note: 'Building → PDF spec extraction running, data foundation v2 done', color: 'var(--amber)' },
-            { num: 4, name: 'Rook Ops (Netrunner)', domain: '♜', note: 'All enhancements, especially NR', color: 'var(--blue)' },
-            { num: 5, name: 'Crypto Intel Tools', domain: '🪙', note: 'Fine tuning reliability & output', color: 'var(--slate)' },
-            { num: 6, name: 'Camarie Photography', domain: '📸', note: 'Email automation + SMS campaigns — block 2 hrs', color: 'var(--slate)' },
+            { num: 2, name: 'Portor Cross Tool', domain: '🏭', note: 'Building → PDF spec extraction running, data foundation v2 done', color: 'var(--amber)' },
+            { num: 3, name: 'Rook Ops (Netrunner)', domain: '♜', note: 'All enhancements, especially NR', color: 'var(--blue)' },
+            { num: 4, name: 'Crypto Intel Tools', domain: '🪙', note: 'Fine tuning reliability & output', color: 'var(--slate)' },
+            { num: 5, name: 'Camarie Photography', domain: '📸', note: 'Email automation + SMS campaigns — block 2 hrs', color: 'var(--slate)' },
+            { num: 6, name: 'Portor Marketing Video', domain: '🏭', note: 'Outsourced to Fiverr ($100)', color: 'var(--slate)', tag: '📦 AWAITING DELIVERY' },
             { num: 7, name: 'Trading Engine', domain: '📈', note: 'Data collection — revisit March', color: 'var(--slate)', tag: '⏳ DATA COLLECTION' },
           ].map(p => `
             <div style="display:flex;align-items:center;gap:12px;padding:8px 12px;background:var(--bg);border-radius:8px;border-left:3px solid ${p.color}">
