--- a/index.html
+++ b/index.html
@@ -2369,6 +2369,10 @@ function renderTeam() {
 // ============================================================
 
 renderOverview();
+// Render immediately with static data — don't wait for WS
+renderCurrentTab();
+
+// Then try WS for live updates (will fail gracefully if unavailable)
 wsConnect();
 
 </script>
