--- a/index.html
+++ b/index.html
@@ -1019,37 +1019,51 @@ const AGENT_FILES = AGENT_FILES_DATA; // populated below
 
 const AGENTS = [
   {
-    id: 'desktop-rook',
+    id: 'rook',
     name: 'Rook',
     icon: '♜',
     model: 'claude-opus-4-6',
-    host: 'WIN-79G2697J611 (WSL2)',
-    version: '2026.2.14',
+    host: '138.197.64.68 (VPS — 24/7)',
+    version: '2026.2.23',
     status: 'online',
-    context: { used: 155143, max: 200000 },
-    mdFiles: ['SOUL.md','IDENTITY.md','AGENTS.md','USER.md','MEMORY.md','TOOLS.md','HEARTBEAT.md'],
+    context: { used: 0, max: 200000 },
+    extra: 'Primary operator. Migrated from WSL2 → VPS Feb 23, 2026.',
+    mdFiles: ['SOUL.md','IDENTITY.md','AGENTS.md','USER.md','MEMORY.md','TOOLS.md','HEARTBEAT.md','BOOTSTRAP.md'],
   },
   {
     id: 'dunk',
     name: 'Dunk',
     icon: '♞',
-    model: 'claude-sonnet-4-20250514',
-    host: '138.197.64.68 (DigitalOcean)',
-    version: 'unknown',
-    status: 'online',
+    model: 'claude-opus-4-6',
+    host: 'VPS sub-agent (standby)',
+    version: '2026.2.23',
+    status: 'idle',
     context: { used: 0, max: 200000 },
-    extra: 'VPS — OpenClaw running (pid 194098), uptime 7d',
+    extra: 'Memory backed up to ~/.openclaw-dunk-backup/. Available for reviews & audits in Engine Optimization pipeline.',
     mdFiles: ['SOUL.md','IDENTITY.md','MEMORY.md'],
   },
   {
     id: 'scout',
     name: 'Scout',
     icon: '♟️',
-    model: 'claude-sonnet-4-20250514',
+    model: 'claude-sonnet-4-6',
     host: 'VPS sub-agent',
-    schedule: 'Daily 8 AM CST',
-    status: 'idle',
+    schedule: '5 AM + 5 PM CT daily',
+    status: 'online',
     context: { used: 0, max: 200000 },
+    extra: 'Data analyst. Runs 2x/day in Engine Optimization pipeline.',
+    mdFiles: [],
+  },
+  {
+    id: 'signal-engine',
+    name: 'Signal Engine',
+    icon: '⚡',
+    model: 'Node.js (headless)',
+    host: 'VPS (pm2 — continuous)',
+    version: 'v1.1',
+    status: 'online',
+    context: { used: 0, max: 0 },
+    extra: '7 active strategies. 30s scan cycle. Autonomous optimization 2x/day.',
     mdFiles: [],
   }
 ];
